# xdp-guard-rs

./: Cargo.toml  LICENSE.md  README.md  build.rs  flake.nix
LICENSES/: MIT.txt
benchmarks/: README.md  firewall_machine_stat_raw.txt  pktgen-udp64-flood.sh
benchmarks/base/: raw1.txt  raw2.txt  raw3.txt
benchmarks/nftables/: raw1.txt  raw2.txt  raw3.txt
benchmarks/xdp/: raw.txt  raw2.txt  raw3.txt
example_cfg/: block_udp_12345.toml  dangerous.toml  example.toml  reject_port.toml
src/: ctypes.rs  error.rs  fw.bpf.c  fw.h  helper.rs  main.rs  ruleset.rs
src/service/: metrics.rs  mod.rs  update.rs
