[package]
name = "xdp-guard-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.x"
libbpf-rs = "0.26.2"
nix = { version = "0.31.3", features = ["net"] }
prometheus = { version = "0.14.0", features = ["process"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[build-dependencies]
cc = "1.2.63"
